docs/v0.3.x/zh-CN/i18n.md
<!-- title: 国际化; order: 14 -->
# 国际化支持

你已经知道了项目中有一个 `src/locales/` 目录用来存储语言包，这儿我将会跟你介绍更多
关于本地化的细节，并向你展示如何使用它。

## 创建一个语言包

你只需要创建一个后缀为 `.json`, `.ts` 或者 `.js` 的文件，存储在 `src/locales/` 
目录中，文件命名依据 [RFC 1766](https://www.ietf.org/rfc/rfc1766.txt) 标准。 例如
`en-US`、`zh-CN`、`ko`。 如果是一个 `.ts` 或者 `.js` 文件，那它应该导出一个默认
对象，其包含着语句和对应的翻译。

### 语言包示例

```json
// en-US.json
{
    "Hello, World!": "Hello, World!",
    "This is my first sfn application.": "This is my first sfn application."
}
```

```typescript
// zh-CN.ts
export default {
    "Hello, World!": "你好，世界！",
    "This is my first sfn application.": "这是我的第一个 sfn 应用。"
};
```

```javascript
// ko.js
exports.default = {
    "Hello, World!": "안녕, 세상!",
    "This is my first sfn application.": "이것은 내 첫 sfn 응용 프로그램입니다."
}
```

你可以看到这儿 `en-US` 是默认的语言（因为它的键名和值是相同的），因此你也可以使用简写
的方式来编写它。


```json
// en-US.json
[
    "Hello, World!",
    "This is my first sfn application."
]
```

### 设置默认的语言

在 `config.ts` 文件中，设置 `config.lang` 即可修改应用所使用的默认语言：

```typescript
export const config: SFNConfig = {
    // ...
    lang: "zh-CN",
    // ...
};
```

## 服务中的 i18n

在一个服务中（或者扩展的服务如 HttpController、WebSocketController 等），你可以
使用方法 `i18n()` 来根据已知语句加载适当的翻译。

### 使用 `i18n()` 方法的示例

```typescript
import { HttpController, route } from "sfn";

export default class extends HttpController {
    @route.get("/")
    index() {
        return this.i18n("Hello, World!");
    }
}
```

在 HttpController 或 WebSocketController 中，框架会自动检查客户端支持哪一种语言。

在 HttpController 中，这些字段将会被按照如下顺序进行检查：

- `req.query.lang` language name appears in the URL query string.
- `req.cookies.lang` language name appears in cookies.
- `req.lang` language name appears in request header `Accept-Language`.

在 WebSocketController 中，这些字段将会被按照如下顺序进行检查：

- `socket.cookies.lang` language name appears in cookies.
- `socket.lang` language name appears in request header `Accept-Language`.

除了自动检测外，你总是可以在服务定义中设置特定的语言名称。

```typescript
import { HttpController, route } from "sfn";

export default class extends HttpController {
    lang = "ko";

    @route.get("/")
    index() {
        return this.i18n("Hello, World!"); // => 안녕, 세상!
    }
}
```

如果所有的这些属性都没有被设置，那么默认的语言包将会被使用。

## 模板中的 i18n 

在一个模板（即试图文件）中，你可以使用函数 `i18n()` 来获取相应的翻译。

```html
<p>
    <%= i18n("This is an example"); %>
</p>
```

## 其他细节

如果请求的语句在指定的语言包中不存在，那么它将会被原样输出。如同 `console.log()` 
一样，你可以在语句中使用诸如 `%s`、`%d` 此类的占位符，然后将它们的值作为剩余参数传递
到 `i18n()` 中。

```javascript
i18n("This is an %s.", "example"); // => This is an example.
```