docs/v1/zh-CN/i18n.md
<!-- title: 国际化; order: 11 -->
## 国际化支持

你已经知道了项目中有一个 `src/locales/` 目录用来存储语言包，这儿我将会跟你介绍更多
关于本地化的细节，并向你展示如何使用它。

## 创建一个语言包

你只需要创建一个后缀为 `.json` 或 `.jsonc` 的文件，存储在 `src/locales/` 目录中
文件命名依据 [RFC 1766](https://www.ietf.org/rfc/rfc1766.txt) 标准。 例如 `en-US`
`zh-CN`、`ko`，其包含着语句和对应的翻译。

### 语言包示例

```jsonc
// zh-CN.json
{
    "Hello, World!": "你好，世界！",
    "This is my first sfn application.": "这是我的第一个 sfn 应用。"
}
```

对于默认的语言，则可以无需设置翻译。

```jsonc
// en-US.json
{
    "Hello, World!": "",
    "This is my first sfn application.": ""
}
```

## 设置默认的语言

在 `config.ts` 文件中，设置 `config.lang` 即可修改应用所使用的默认语言：

```typescript
export default <app.Config>{
    // ...
    lang: "zh-CN",
    // ...
};
```

## 服务中的 i18n

在一个继承自 [Service](/api/v1/Service) 基类的服务中（如 HttpController
WebSocketController 等），你可以使用方法 [i18n()](/api/v1/Service#i18n) 来根据已知语句
加载适当的翻译。

### 使用 `i18n()` 方法的示例

```typescript
import { HttpController, route } from "sfn";

export default class extends HttpController {
    @route.get("/")
    index() {
        return this.i18n("Hello, World!");
    }
}
```

在 HttpController 或 WebSocketController 中，框架会自动检查客户端支持哪一种语言。

在 HttpController 中，这些字段将会被按照如下顺序进行检查：

- `req.query.lang` language name appears in the URL query string.
- `req.cookies.lang` language name appears in cookies.
- `req.lang` language name appears in request header `Accept-Language`.

在 WebSocketController 中，这些字段将会被按照如下顺序进行检查：

- `socket.cookies.lang` language name appears in cookies.
- `socket.lang` language name appears in request header `Accept-Language`.

除了自动检测外，你总是可以在服务定义中设置特定的语言名称。

```typescript
import { HttpController, route } from "sfn";

export default class extends HttpController {
    lang = "ko";

    @route.get("/")
    index() {
        return this.i18n("Hello, World!"); // => 안녕, 세상!
    }
}
```

如果所有的这些属性都没有被设置，那么默认的语言包将会被使用。

## 模板中的 i18n 

在一个模板（即视图文件）中，你可以使用函数 `i18n()` 来获取相应的翻译。

```html
<p>
    <%= i18n("This is an example"); %>
</p>
```

## 其他细节

### 格式化输出

如果请求的语句在指定的语言包中不存在，那么它将会被原样输出。如同 `console.log()` 
一样，你可以在语句中使用诸如 `%s`、`%d` 此类的占位符，然后将它们的值作为剩余参数传递
到 `i18n()` 中。

```typescript
i18n("This is an %s.", "example"); // => This is an example.
```

### 语言别名

不同的客户端可能会发送的不同的语言标识，例如 MacOS 会将中文发送成 `zh`，而大多数情况下我们
使用的是 `zh-CN` (包括语言包文件名)。为了应对这个问题，SFN v0.6 引入了语言别名支持，只需要
在语言包文件中添加一个 `$alias` 属性即可。

```json
// locales/zh-CN.json
{
    "$alias": "zh,zh-hans,chinese-simplified"
}
```
